--- a/kamoulcup/km/view/css/default.css
+++ b/kamoulcup/km/view/css/default.css
@@ -707,7 +707,6 @@ $INDEX 8-2 : Players list
 
 #home #kmWrapper {
 	width:680px;
-	/*display:table-cell;*/
 }
 
 #home #lastResults {
@@ -735,10 +734,16 @@ $INDEX 8-2 : Players list
 	width:50%;
 	float:right;
 }
+/******************************************************
 
+	$INDEX11 - PLAYER
+	
+******************************************************/
 #player #timeline {
 	text-align:left;
 	width:300px;
+	/*display:table-cell;*/
+	float:right;
 }
 #cd-timeline {
     margin-bottom: 2em;
@@ -756,16 +761,6 @@ $INDEX 8-2 : Players list
     left: 50%;
     margin-left: -2px;
 }
-/*@media only screen and (min-width: 1170px) {
-	#cd-timeline {
-    	margin-bottom: 3em;
-    	margin-top: 3em;
-	}
-	#cd-timeline:before {
-    	left: 50%;
-    	margin-left: -2px;
-	}
-}*/
 .cd-timeline-block {
     margin: 1em 0;
     position: relative;
@@ -866,3 +861,46 @@ $INDEX 8-2 : Players list
     	right: 122%;
     	text-align: right;
 	}
+#playerInfo {
+	font-size:1.3em;
+}
+#playerInfo li {
+	margin-bottom:1em;
+}
+#playerPerf {
+	margin-top:4em;
+	margin-bottom:2em;
+}
+#playerPerf table{
+	margin:1em;
+	font-size:1.3em;
+	text-align:center;
+	-moz-border-radius: 12px;
+	-webkit-border-radius: 12px;
+	border-radius: 12px;
+}
+#playerPerf td,th{
+	padding-top:0.5em;
+	padding-bottom:0.5em;
+}
+#kmWrapper .titre_page {
+	font-family: 'Neucha', Calibri, Arial, sans-serif;
+	font-weight: 300;
+    font-size: 2em;
+	text-align: left;
+	margin: 0px 0px;
+}
+#kmWrapper .colgauche_gauche {
+	/*float:left;*/
+}
+#kmWrapper .colgauche_droite {
+	display:table;
+	width:100%;
+}
+#kmWrapper .sectionPage {
+	display:table-cell;
+	padding:5px;
+}
+#news {
+	font-size:1.3em;
+}
