--- a/kamoulcup/km/view/css/default.css
+++ b/kamoulcup/km/view/css/default.css
@@ -15,6 +15,8 @@
 		$INDEX8 - MERKATO
 		$INDEX9 - TEAM
 		$INDEX10 - HOME
+        $INDEX11 - PLAYER
+        $INDEX12 - FIXTURES
 		
 ******************************************************/	
 
@@ -498,8 +500,14 @@ $INDEX 8-2 : Players list
 }
 
 #playersCart{
+    position:fixed;
+    /*
 	float:right;
 	margin:10px;
+    */
+    bottom: 10px;
+    right: 190px;
+    
 	padding:10px;
 	width:462px;
 	text-align:center;
@@ -903,4 +911,21 @@ $INDEX 8-2 : Players list
 }
 #news {
 	font-size:1.3em;
+}
+/******************************************************
+
+	$INDEX12 - FIXTURES
+	
+******************************************************/
+#championship #fixtures table{
+	margin:1em;
+	font-size:1.3em;
+	text-align:center;
+	-moz-border-radius: 12px;
+	-webkit-border-radius: 12px;
+	border-radius: 12px;
+}
+#fixtures td,th{
+	padding-top:0.5em;
+	padding-bottom:0.5em;
 }
