--- a/kamoulcup/km/view/css/themes/km/remodern.css
+++ b/kamoulcup/km/view/css/themes/km/remodern.css
@@ -99,6 +99,14 @@ button:hover:enabled, button:focus:enabled{
 	color:#fab7e6;
 }
 
+.popup .frame {
+    background: none repeat scroll 0 0 #ECECED;
+    border:1px solid #3E4147;
+    -moz-border-radius: 12px;
+	-webkit-border-radius: 12px;
+	border-radius: 12px;
+}
+
 
 /******************************************************
 
