--- a/kamoulcup/km/view/css/themes/km/remodern.css
+++ b/kamoulcup/km/view/css/themes/km/remodern.css
@@ -107,6 +107,9 @@ button:hover:enabled, button:focus:enabled{
 	border-radius: 12px;
 }
 
+.bullet {
+    color:#fab7e6;
+}
 
 /******************************************************
 
