--- a/kamoulcup/km/view/css/default.css
+++ b/kamoulcup/km/view/css/default.css
@@ -948,6 +948,7 @@ $INDEX 8-2 : Players list
 }
 #news {
 	font-size:1.3em;
+    padding-right: 30%;
 }
 /******************************************************
 
