--- a/kamoulcup/km/view/css/default.css
+++ b/kamoulcup/km/view/css/default.css
@@ -389,13 +389,15 @@ html, body,
     width:100%;
     height:100%
 }
-.popup .frame {
+.popup > div{
     position:fixed;
     z-index: 10;
-    width:300px;
-    height: 200px;
     top:50%;
     left:50%;
+}
+.popup .frame {
+    width:300px;
+    height: 200px;
     margin-top: -100px;
     margin-left: -150px;
     line-height: 200px;
@@ -978,7 +980,7 @@ $INDEX 8-2 : Players list
 }
 
 #compoContainer {
-    width:850px;
+    /*width:850px;*/
     display:table;
 }
 #dayScores {
@@ -987,6 +989,13 @@ $INDEX 8-2 : Players list
 }
 #daysList {
     display:table-cell;
+}
+#compoContainer {
+    /*width:800px;
+    height: 500px;*/
+    margin-top: -250px;
+    margin-left: -400px;
+    padding:5px;
 }
 #compo{
     width:536px;
