--- a/kamoulcup/km/view/css/themes/km/remodern.css
+++ b/kamoulcup/km/view/css/themes/km/remodern.css
@@ -99,7 +99,7 @@ button:hover:enabled, button:focus:enabled{
 	color:#fab7e6;
 }
 
-.popup .frame {
+.popup > div{
     background: none repeat scroll 0 0 #ECECED;
     border:1px solid #3E4147;
     -moz-border-radius: 12px;
