--- a/kamoulcup/km/view/css/themes/km/remodern.css
+++ b/kamoulcup/km/view/css/themes/km/remodern.css
@@ -420,15 +420,15 @@ body {
     border: 3px solid #ECECED;
 }
 .compoSubPlayer {
-    background: none repeat scroll 0 0 rgba(256, 0, 0, 0.5);
-    border: 1px solid #FF0000;
+    background: none repeat scroll 0 0 rgba(255, 255, 102, 0.5);
+    border: 1px solid #FFFF66;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 }
 .compoSubPlayerDrop {
-    background: none repeat scroll 0 0 rgba(256, 0, 0, 0.8);
-    border: 3px solid #FF0000;
+    background: none repeat scroll 0 0 rgba(255, 255, 102, 0.8);
+    border: 3px solid #FFFF66;
 }
 .benchPlayer {
     background-color:#3E4147;
