--- a/kamoulcup/lodemars.css
+++ b/kamoulcup/lodemars.css
@@ -24,7 +24,7 @@ background:black;}
 width:1115px;
 height:231px;
 margin:0 auto 0 auto;
-background:url(images/head.png);}
+background:url(images/headrussia.png);}
 
 #containeur {
 width:1115px;
